--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,9 @@
 spring:
   profiles:
-    active: prod
+    active: dev
+token:
+  user: userToken
+  resource: rescToken
+account:
+  loginurl: dengludizhi
+  logouturl: logouturl
