--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -23,7 +23,11 @@ feign:
       path: /device/get
       p1: id
   datamanage:
-    url: http://39.106.168.77:8081
+    url: http://127.0.0.1:8081
+    device:
+      path: ${feign.datamanage.url}/device
+      find:
+        path: ${feign.datamanage.device.path}/find
     employee:
       path: ${feign.datamanage.url}/employee
       create:
