将设备编码解码后再查询数据的操作->根据要解码的设备编码，直接查询数据库返回app所需数据

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -29,6 +29,8 @@ feign:
       path: ${feign.datamanage.url}/device
       find:
         path: ${feign.datamanage.device.path}/find
+      deviceNo:
+        path: ${feign.datamanage.device.path}/no
     employee:
       path: ${feign.datamanage.url}/employee
       create:
