--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -28,6 +28,8 @@ feign:
       path: ${feign.datamanage.url}/device
       find:
         path: ${feign.datamanage.device.path}/find
+      deviceNo:
+        path: ${feign.datamanage.device.path}/no
     employee:
       path: ${feign.datamanage.url}/employee
       create:
